force-app/main/default/objects/BTL_Portfolio__c/BTL_Portfolio__c.object-meta.xml
<CustomObject>
    <label>BTL Portfolio</label>
    <nameField>
        <displayFormat>BTL- {00000000}</displayFormat>
        <label>BTL Portfolio Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BTL Portfolios</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>