force-app/main/default/objects/BTL_Portfolio__c/fields/Current_mortgage_payment__c.field-meta.xml
<CustomField>
    <fullName>Current_mortgage_payment__c</fullName>
    <label>Current mortgage payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>