force-app/main/default/objects/BTL_Portfolio__c/fields/Deal_end_date__c.field-meta.xml
<CustomField>
    <fullName>Deal_end_date__c</fullName>
    <label>Deal end date</label>
    <type>Date</type>
</CustomField>