force-app/main/default/objects/BTL_Portfolio__c/fields/Do_you_have_any_mortgages__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_any_mortgages__c</fullName>
    <inlineHelpText>Do you have any mortgages (not including the mortgage this application is for?)</inlineHelpText>
    <label>Do you have any mortgages?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>