force-app/main/default/objects/BTL_Portfolio__c/fields/Existing_property_type__c.field-meta.xml
<CustomField>
    <fullName>Existing_property_type__c</fullName>
    <label>Existing property type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential mortgage</fullName>
            </value>
            <value>
                <fullName>BTL mortgage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>