force-app/main/default/objects/BTL_Portfolio__c/fields/Monthly_rental_income__c.field-meta.xml
<CustomField>
    <fullName>Monthly_rental_income__c</fullName>
    <label>Monthly rental income?</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>